@@ -100,17 +100,13 @@ public class FullTextTools
         }
 
         // Loop through the specified MARC fields:
-        Set<String> fields = SolrIndexer.instance().getFieldList(record, fieldSpec);
-        Iterator<String> fieldsIter = fields.iterator();
-        if (fields != null) {
-            while(fieldsIter.hasNext()) {
-                // Get the current string to work on (and sanitize spaces):
-                String current = fieldsIter.next().replaceAll(" ", "%20");
-                // Filter by file extension
-                if (extension == null || current.endsWith(extension)) {
-                    // Load the parser output for each tag into a string
-                    result = result + harvestWithParser(current, parserSettings);
-                }
+        for (String raw : SolrIndexer.instance().getFieldList(record, fieldSpec)) {
+            // Get the current string to work on (and sanitize spaces):
+            String current = raw.replaceAll(" ", "%20");
+            // Filter by file extension
+            if (extension == null || current.endsWith(extension)) {
+                // Load the parser output for each tag into a string
+                result = result + harvestWithParser(current, parserSettings);
             }
         }
         // return string to SolrMarc
@@ -206,7 +202,7 @@ public class FullTextTools
         //System.out.println("Loading fulltext from " + url + ". Please wait ...");
         try {
             Process p = Runtime.getRuntime().exec(cmd);
-            
+
             // Debugging output
             /*
             BufferedReader stdInput = new BufferedReader(new
@@ -216,7 +212,7 @@ public class FullTextTools
                 System.out.println(s);
             }
             */
-            
+
             // Wait for Aperture to finish
             p.waitFor();
         } catch (Throwable e) {
@@ -248,6 +244,28 @@ public class FullTextTools
         return plainText;
     }
 
+    class ErrorStreamHandler extends Thread {
+        InputStream stdErr;
+
+        ErrorStreamHandler(InputStream stdErr) {
+            this.stdErr = stdErr;
+        }
+
+        public void run()
+        {
+            try {
+                InputStreamReader isr = new InputStreamReader(stdErr, "UTF8");
+                BufferedReader br = new BufferedReader(isr);
+                String line = null;
+                while ((line = br.readLine()) != null) {
+                    logger.debug(line);
+                }
+            } catch (Exception e) {
+                e.printStackTrace();
+            }
+        }
+    }
+
     /**
      * Harvest the contents of a document file (PDF, Word, etc.) using Tika.
      * This method will only work if Tika is properly configured in the fulltext.ini
@@ -258,16 +276,17 @@ public class FullTextTools
      * @return the full-text
      */
     public String harvestWithTika(String url, String scraperPath) {
-
-        // Construct the command
-        String cmd = "java -jar " + scraperPath + " -t -eUTF8 " + url;
-
         StringBuilder stringBuilder= new StringBuilder();
 
         // Call our scraper
         //System.out.println("Loading fulltext from " + url + ". Please wait ...");
         try {
-            Process p = Runtime.getRuntime().exec(cmd);
+            ProcessBuilder pb = new ProcessBuilder(
+                "java", "-jar", scraperPath, "-t", "-eutf8", url
+            );
+            Process p = pb.start();
+            ErrorStreamHandler esh = new ErrorStreamHandler(p.getErrorStream());
+            esh.start();
             BufferedReader stdInput = new BufferedReader(new
                 InputStreamReader(p.getInputStream(), "UTF8"));
 
